zeit.wysiwyg changes
====================

1.41.0 (unreleased)
-------------------

- Use separate ordering values instead of a single weight for conversion steps
  from XML to HTML and vice versa. (#10251)


1.40.3 (2011-12-08)
-------------------

- Fix handling of comments and empty video ids (#10038).


1.40.2 (2011-12-01)
-------------------

- Fix extracting image tags from paragraphs (#10027, #10033).


1.40.1 (2011-11-24)
-------------------

- Fix name of source with videos and playlists.


1.40.0 (2011-11-13)
-------------------

- Fixed bug: Empty citations caused xsi:nil when converted to HTML and an error when
  converted back to XML.

- ``<image>`` tages are not longer inside of a ``<p>``. That is there is no way
  to create those images with the WYSIWYG editor and any such image encountered
  is automatically migrated (#8158)

- Put out related list as ``<relateds/>`` as it was supposed to be (#8066).

- Drop backward compatibility for <video> tags with videoId and player
  attributes. Only href and href2 are supported now.

- Empty elements (like <gallery/>) are converted in a useful way now.


1.39.1 (2010-08-09)
-------------------

- Removed pointles selenium test (#7549).


1.39.0 (2010-06-09)
-------------------

- Add video-uniqueId to XML (#7381).


1.38.1 (2010-06-03)
-------------------

- A Video might have expires==None


1.38.0 (2010-06-02)
-------------------

- Removed support for ``article_extra`` (#5935).
- Take expires from video object if user entered no value (#7028).


1.37.1 (2010-04-14)
-------------------

- Anlegen von Playlisten funktioniert wieder (#7077).


1.37.0 (2010-04-12)
-------------------

- Using versions from the ZTK.

- Using object browser to select videos (#6912).


1.36.0 (2010-03-10)
-------------------

- Tabelle und Anker entfernt (#6878).


1.35.0 (2009-12-18)
-------------------

- Wenn Bilder referenziert werden, wird der Artikel aktualisiert, wenn die
  Bilder sich ändern (#6254).